--- a/Manuscript/FinalDraft3/supp3.tex
+++ b/Manuscript/FinalDraft3/supp3.tex
@@ -26,7 +26,7 @@
 \captionsetup{compatibility=false}
 
 \begin{document}
-\title{Supplementary Materials: Eco-evolutionary dynamics, density-dependent dispersal, and collective behavior: implications for salmon metapopulation robustness}
+\title{Supplementary Materials: Eco-evolutionary dynamics, density-dependent dispersal, and collective behaviour: implications for salmon metapopulation robustness}
 % \author{
 % Justin D. Yeakel${}^{1,2,*}$, Jean P. Gibert${}^{1}$, Peter A. H. Westley${}^{3}$, \& Jonathan W. Moore${}^{4}$ \\
 % ${}^1$School of Natural Sciences, University of California, Merced, Merced CA, USA \\
@@ -236,14 +236,15 @@ Example of the numerical procedure used to estimate recovery time. After a distu
 singlelinecheck=false
 }
 \centering
-\includegraphics[width=0.35\textwidth]{fig_density2.pdf}
+\includegraphics[width=0.8\textwidth]{fig_density.pdf}
 \caption{
-Steady-state densities of both populations as a function of $m$: one in a dominant state and one in a subordinate state.
-Steady-states for populations with symmetrical values ($\alpha=0$) in the vital rates $r_{\rm max}$ and $\beta$ are shown with cool tones.
-As the asymmetry among populations between sites increases ($\alpha>0$), their vital rates diverge, such that the maximal growth at sites 1 and 2 is now $r_{\rm max,1}=(1 + \alpha)r_{\rm max,2}$ and $\beta_1=(1+\alpha)\beta_2$ where $\alpha$ is increased from $0$ to $0.1$, thereby increasing the asymmetry in vital rates.
-Steady-states for populations with increasingly asymmetric values ($\alpha\rightarrow 0.1$) for vital rates $r_{\rm max}$ and $\beta$ are shown in warmer tones.
-The lower-density values that appear between $m=0.06$ and $m=0.1$ represent populations that have been trapped in the low-density basins of attraction associated with regime I.
-Increasing the asymmetry in vital rates does not impact the qualitative nature of the dynamics.
+The effects of asymmetrical vital rates on the formation of dominant/subordinate states as a function of straying $m$. 
+(a) Steady state densities for populations with symmetrical values ($\alpha=0$) in vital rates $r_{\rm max}$ and $\beta$ are shown with cool (blue) tones.
+As the asymmetry among populations between sites increases ($\alpha>0$), vital rates diverge, such that the maximal growth at sites 1 and 2 is now $r_{\rm max,1}=(1 + \alpha)r_{\rm max,2}$ and $\beta_1=(1+\alpha)\beta_2$ where $\alpha$ is increased from $0$ to $0.1$.
+Steady-states for populations with increasingly asymmetric values are shown in warmer (red) tones.
+(b) Steady states for populations with higher asymmetric values ($0.1 \leq \alpha \leq 0.4$) for vital rates $r_{\rm max}$ and $\beta$. Note the change in scale compared to panel (a). 
+If asymmetry in vital rates is very high, the pitchfork bifurcation occurs at values of $m<0$.
+We observe that increasing the asymmetry in vital rates -- even to very high levels -- does not impact the qualitative nature of the dynamics.
 } \label{fig:symmetry}
 \end{figure}
 
@@ -257,7 +258,8 @@ singlelinecheck=false
 \centering
 \includegraphics[width=0.35\textwidth]{fig_pevsrt.pdf}
 \caption{
-Comparison of portfolio effects vs. recovery time following the near-collapse of both populations.
+Comparison of portfolio effects vs. recovery time following the near-collapse of both populations where straying is assumed to be density-independent.
+Parameter values used are those reported in table 1, with values of $ 0 < h^2 \leq 0.5$ and for $0 < m \leq 0.5$.
 } \label{fig:pevsrt}
 \end{figure}
 
